[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datacenter_soc"
version = "0.2.0"
description = "Multi-agent Datacenter SOC OpenEnv for workload migration and tactical defense"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "openenv",
    "openenv-core[core]>=0.2.1",
    "fastmcp",
    "pydantic",
    "openai",
    "httpx",
    "python-dotenv",
    "rich",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]
# Streamlit dashboard deps.
viz = [
    "streamlit",
]
# Optional local-training deps.
train = [
    "torch",
    "transformers",
    "trl>=0.12",
    "datasets",
    "matplotlib",
    "nest_asyncio",
]

[project.scripts]
# Run the server via: `uv run server` or `python -m server.app`.
server = "server.app:main"
soc-inference = "inference:main"
soc-viz = "visualizer:main"

[tool.setuptools]
include-package-data = true
packages = ["server"]
package-dir = { "" = "." }

[tool.uv]
package = false
